# FFmpegCmd

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/wyh/ffmpegcmd/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_log.h  cmdutils.c  cmdutils.h  ffmpeg-api.c  ffmpeg-api.h  ffmpeg-jni.c  ffmpeg-jni.cpp  ffmpeg-jni.h  ffmpeg.c  ffmpeg.h  ffmpeg_filter.c  j4a_base.c  j4a_base.h
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/java/com/jni/: FFmpegJni.java
app/src/main/java/com/wyh/ffmpegcmd/: AboutFragment.java  App.java  AppExecutor.java  MainActivity.java  PermissionHelper.java
app/src/main/java/com/wyh/ffmpegcmd/common/: App.java  AppExecutors.java  Click.java  Logger.java  PermissionHelper.java  SaveProgressDialog.java  SecureAlertDialog.java  SecureDialog.java  SecurePopupWindow.java  SecureProgressDialog.java  VideoUtil.java
app/src/main/java/com/wyh/ffmpegcmd/edit/: BaseEditActivity.java  EditItem.java  EditItemAdapter.java  EditMediaListActivity.java  ItemMediaAdapter.java  MediaFile.java
app/src/main/java/com/wyh/ffmpegcmd/edit/audio/: AudioFragment.java  AudioMixActivity.java  AudioMixFragment.java  AudioTransCodeActivity.java
app/src/main/java/com/wyh/ffmpegcmd/edit/video/: AudioDeMuxActivity.java  VideoDeMuxActivity.java  VideoFilterActivity.java  VideoFlipActivity.java  VideoFragment.java  VideoNoWaterMarkActivity.java  VideoPuzzActivity.java  VideoTransCodeActivity.java  VideoUnLogoActivity.java  VideoWaterMarkActivity.java
app/src/main/java/com/wyh/ffmpegcmd/ffmpeg/: Callback.java  FFmpeg.java  FFmpegApi.java  FFmpegAudio.java  FFmpegJni.java  FFmpegVideo.java
app/src/main/java/com/wyh/ffmpegcmd/ffmpeg/Jni/: FFmpegJni.java
app/src/main/java/com/wyh/ffmpegcmd/util/: DateUtil.java  DeviceUtil.java  FileUtil.java  KeyBoardUtil.java  SnackBarUtil.java  StorageUtils.java  ToastUtil.java  ViewUtil.java
app/src/main/res/drawable/: dialog_bottom_bg.xml  ic_filter_black_24dp.xml  progress_bar.xml
app/src/main/res/layout/: activity_audio_mix.xml  activity_main.xml  activity_video_mark.xml  activity_video_no_water_mark.xml  activity_video_puzz.xml  activity_video_un_logo.xml  fragment_about.xml  fragment_edit_list.xml  item_edit.xml  item_media.xml  save_progress.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/wyh/ffmpegcmd/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
